--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
     --color-primary: #4D41C0;
     --white: #fff;
     --test-light-gray: #aaa;
-
+    --star-yellow: #ffbb3a;
 }
 
 *{
@@ -82,7 +82,7 @@ a, a:hover {
     align-items: center;
     justify-content: space-between;
     border-radius: 0 0 8px 8px;
-    min-height: 150px;
+    height: 220px;
 }
 
 .dsmovie-card-description h3{
@@ -90,6 +90,29 @@ a, a:hover {
     font-weight: 700;
     margin-bottom: 25px;
     text-align: center;
+}
+
+.dsmovie-card-description-botton{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-botton h4{
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+    margin-bottom: 10px;
+}
+
+.dsmovie-card-description-botton img{
+    width: 22px;
+}
+
+.dsmovie-card-description-botton p{
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--test-light-gray);
 }
 
 .dsmovie-btn, .dsmovie-btn:hover{
