--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ a, a:hover {
 }
 
 #dsmovie-card-list{
-    padding: 40px 0;
+    padding: 0 10px;
 }
 
 .dsmovie-card{
@@ -130,7 +130,7 @@ a, a:hover {
 }
 
 .dsmovie-form-container{
-    padding: 40px 10px;
+    padding: 40px 0px;
     max-width: 480px;
 }
 
@@ -168,4 +168,50 @@ a, a:hover {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+}
+
+.dsmovie-pagination-container{
+    padding: 15px 0;
+    display: flex;
+    justify-content: center;
+}
+
+.dsmovie-pagination-box{
+    width: 180px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dsmovie-pagination-box p{
+    margin: 0;
+    font-size: 12px;
+    color: var(--color-primary);
+}
+
+.dsmovie-pagination-box button{
+    width: 40px;
+    height: 40px;
+    border: 1px solid var(--color-primary);
+    border-radius: 4px;
+    background-color: var(--white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.dsmovie-pagination-box button img{
+    filter: brightness(0) saturate(100%) invert(24%) sepia(79%) saturate(4724%) hue-rotate(243deg) brightness(80%) contrast(83%);
+}
+
+.dsmovie-pagination-box button:disabled{
+    border: 1px solid var(--test-light-gray);
+}
+
+.dsmovie-pagination-box button:disabled img{
+    filter: unset;
+}
+
+.dsmovie-flip-horizontal{
+    transform: rotate(180deg);
 }
